--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,7 +97,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply overscroll-y-none bg-background text-foreground;
     font-feature-settings: 'rlig' 1, 'calt' 1;
   }
 }
